--- a/scss/base/_init.scss
+++ b/scss/base/_init.scss
@@ -1,3 +1,4 @@
 @import "../../zurb_foundation/scss/foundation/functions";
 @import "../settings";
-$footer-height: 200px;
+
+$footer-height: 250px;
